src/components/Header/NavigationList/NavigationItem/NavigationItem.module.scss
.navListItem,
.navListItemActive,
.navListItemHighlighted {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  padding: 0.5rem 1.5rem;
  transition: background-color 0.2s ease-in-out;
  cursor: pointer;
  text-wrap: nowrap;

  &:hover {
    color: var(--white);
    background-color: var(--accent-color-green);
  }
}

.navListItemActive {
  color: var(--white);
  background-color: var(--accent-color-green);
}

.navListItemHighlighted {
  padding: 0.7rem 1.7rem;
  font-size: 0.9rem;
  margin-left: 1.5rem;
  color: var(--white);
  text-transform: uppercase;
  background-color: var(--dark-grey);

  &:hover {
    background-color: var(--accent-color-teal);
  }

  @media (max-width: 780px) {
    margin-left: 0;
  }
}

